Fix active navigation link looks on small screen

--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,10 @@ li.panel .button-list {
   .panel {
     padding: 0;
   }
+  .nav__item {
+    text-align: center;
+    display: flex;
+  }
 }
 
 @media (min-width: 550px) {
